--- a/CFM/app/src/main/res/layout/activity_tela_cpf.xml
+++ b/CFM/app/src/main/res/layout/activity_tela_cpf.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0C4210"
+    android:background="#FFF19E"
     tools:context=".TelaCPF">
 
     <TextView
@@ -13,7 +13,7 @@
         android:layout_width="191dp"
         android:layout_height="33dp"
         android:text="Digite seu CPF:"
-        android:textColor="#FFFFFF"
+        android:textColor="#1B1717"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -29,8 +29,9 @@
         android:layout_height="48dp"
         android:ems="10"
         android:inputType="number"
-        android:textColor="#FFFFFF"
+        android:textColor="#090909"
         android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.587"
@@ -42,13 +43,13 @@
         android:id="@+id/button"
         android:layout_width="313dp"
         android:layout_height="49dp"
-        android:background="#FF00E3"
-        android:backgroundTint="#FF0000"
+        android:backgroundTint="#FF6F00"
         android:onClick="verificar"
         android:text="Entrar"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.591"
