--- a/CFM/app/src/main/res/layout/activity_tela_inicial.xml
+++ b/CFM/app/src/main/res/layout/activity_tela_inicial.xml
@@ -6,60 +6,110 @@
     android:layout_height="match_parent"
     tools:context=".TelaInicial">
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="72dp"
-        android:layout_height="78dp"
-        android:text="Button"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="218dp" />
+    <!-- View superior -->
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="72dp"
-        android:layout_height="78dp"
-        android:text="Button"
-        tools:layout_editor_absoluteX="116dp"
-        tools:layout_editor_absoluteY="218dp" />
+    <!-- Texto título -->
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="72dp"
-        android:layout_height="78dp"
-        android:text="Button"
-        tools:layout_editor_absoluteX="323dp"
-        tools:layout_editor_absoluteY="218dp" />
+    <!-- Botões - organizados em linha horizontal com espaço igual -->
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="72dp"
-        android:layout_height="78dp"
-        android:text="Button"
-        tools:layout_editor_absoluteX="223dp"
-        tools:layout_editor_absoluteY="218dp" />
+    <!-- View inferior -->
 
     <View
-        android:id="@+id/view"
-        android:layout_width="471dp"
+        android:id="@+id/topView"
+        android:layout_width="0dp"
         android:layout_height="142dp"
         android:background="#FFEC9C"
-        tools:layout_editor_absoluteX="-48dp"
-        tools:layout_editor_absoluteY="-2dp" />
-
-    <View
-        android:id="@+id/view"
-        android:layout_width="453dp"
-        android:layout_height="125dp"
-        android:background="#FFEC9C"
-        tools:layout_editor_absoluteX="-31dp"
-        tools:layout_editor_absoluteY="649dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="16dp"
         android:text="Seção - Deficiências"
+        android:textColor="#020202"
         android:textSize="34sp"
-        tools:layout_editor_absoluteX="21dp"
-        tools:layout_editor_absoluteY="178dp" />
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/topView" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="156dp"
+        android:layout_height="79dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="48dp"
+        android:backgroundTint="#028DFF"
+        android:text="Físicas"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView2"
+        app:layout_constraintWidth_percent="0.22" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="143dp"
+        android:layout_height="81dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="48dp"
+        android:backgroundTint="#FF9800"
+        android:text="Neurodivergentes"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView2"
+        app:layout_constraintWidth_percent="0.22" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="155dp"
+        android:layout_height="74dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="180dp"
+        android:backgroundTint="#9C27B0"
+        android:text="Sensoriais"
+        android:textStyle="bold"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView2"
+        app:layout_constraintWidth_percent="0.22" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="149dp"
+        android:layout_height="72dp"
+        android:layout_marginTop="180dp"
+        android:layout_marginEnd="48dp"
+        android:backgroundTint="#FF578E"
+        android:text="Intelectuais"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textStyle="bold"
+        android:textSize="24sp"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintTop_toBottomOf="@id/textView2"
+        app:layout_constraintWidth_percent="0.22" />
+
+    <View
+        android:id="@+id/bottomView"
+        android:layout_width="0dp"
+        android:layout_height="125dp"
+        android:background="#FFEC9C"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="89dp"
+        android:layout_height="73dp"
+        app:srcCompat="@drawable/cf"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="62dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
