--- a/CFM/app/src/main/res/layout/activity_login.xml
+++ b/CFM/app/src/main/res/layout/activity_login.xml
@@ -38,9 +38,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
-            android:background="@android:drawable/edit_text"
+            android:background="@drawable/edit_text"
             android:hint="Email"
-            android:padding="10dp" />
+            android:padding="10dp"
+            android:textColor="#000000"
+            android:textColorHighlight="#C51F1F"
+            android:textStyle="bold" />
 
         <!-- SENHA -->
         <EditText
@@ -48,10 +51,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:background="@android:drawable/edit_text"
+            android:background="@drawable/edit_text"
             android:hint="Senha"
             android:inputType="textPassword"
-            android:padding="10dp" />
+            android:padding="10dp"
+            android:textStyle="bold" />
 
         <!-- BOTÃO ENTRAR -->
         <Button
@@ -61,7 +65,8 @@
             android:layout_marginBottom="16dp"
             android:backgroundTint="#FF6F00"
             android:text="Entrar"
-            android:textColor="#FFFFFF" />
+            android:textColor="#FFFFFF"
+            android:textSize="20sp" />
 
         <!-- TEXTO SIGN UP -->
         <TextView
@@ -71,7 +76,8 @@
             android:layout_marginTop="8dp"
             android:text="Não possui conta? Cadstre-se"
             android:textColor="#FF6F00"
-            android:textSize="14sp" />
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 </ScrollView>
