Começo de criação do ChatBot

--- a/CFM/app/src/main/res/layout/activity_tela_inicial.xml
+++ b/CFM/app/src/main/res/layout/activity_tela_inicial.xml
@@ -13,9 +13,9 @@
         android:layout_width="0dp"
         android:layout_height="100dp"
         android:background="#FFEC9C"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <!-- Texto título -->
     <TextView
@@ -27,24 +27,22 @@
         android:textColor="#020202"
         android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/topView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/topView" />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- Logo ou ícone superior -->
+    <!-- Logo -->
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="89dp"
         android:layout_height="73dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/topView"
-        app:srcCompat="@drawable/cf" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/cf"/>
 
-    <!-- Quadrado/Card linha de cima - Físicas -->
-
-    <!-- Quadrado/Card linha de cima - Sensoriais -->
+    <!-- Card Físicas -->
     <FrameLayout
         android:id="@+id/cardFisicas"
         android:layout_width="0dp"
@@ -52,22 +50,19 @@
         android:layout_marginTop="40dp"
         android:background="#24CDF0"
         android:onClick="fisicas"
-        app:layout_constraintEnd_toStartOf="@id/cardSensoriais"
-        app:layout_constraintHorizontal_chainStyle="spread"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/cardSensoriais"
         app:layout_constraintWidth_percent="0.45">
 
         <ImageView
-            android:id="@+id/imageFisicas"
             android:layout_width="158dp"
             android:layout_height="81dp"
             android:layout_gravity="center_horizontal|top"
             android:layout_marginTop="16dp"
-            app:srcCompat="@drawable/ic_fisica" />
+            app:srcCompat="@drawable/ic_fisica"/>
 
         <TextView
-            android:id="@+id/textFisicas"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|bottom"
@@ -75,9 +70,10 @@
             android:text="Físicas"
             android:textColor="#000000"
             android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
     </FrameLayout>
 
+    <!-- Card Sensoriais -->
     <FrameLayout
         android:id="@+id/cardSensoriais"
         android:layout_width="0dp"
@@ -85,21 +81,19 @@
         android:layout_marginTop="40dp"
         android:background="#FF9800"
         android:onClick="sensoriais"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/cardFisicas"
         app:layout_constraintTop_toBottomOf="@id/textView2"
+        app:layout_constraintStart_toEndOf="@id/cardFisicas"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintWidth_percent="0.45">
 
         <ImageView
-            android:id="@+id/imageSensoriais"
             android:layout_width="166dp"
             android:layout_height="74dp"
             android:layout_gravity="center_horizontal|top"
             android:layout_marginTop="16dp"
-            app:srcCompat="@drawable/ic_sensorial" />
+            app:srcCompat="@drawable/ic_sensorial"/>
 
         <TextView
-            android:id="@+id/textSensoriais"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|bottom"
@@ -107,10 +101,10 @@
             android:text="Sensoriais"
             android:textColor="#000000"
             android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
     </FrameLayout>
 
-    <!-- Quadrado/Card linha de baixo - Intelectuais -->
+    <!-- Card Intelectuais -->
     <FrameLayout
         android:id="@+id/cardIntelectuais"
         android:layout_width="0dp"
@@ -118,22 +112,19 @@
         android:layout_marginTop="16dp"
         android:background="#9C27B0"
         android:onClick="intelectuais"
-        app:layout_constraintEnd_toStartOf="@id/cardNeurodivergentes"
-        app:layout_constraintHorizontal_chainStyle="spread"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cardFisicas"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/cardNeurodivergentes"
         app:layout_constraintWidth_percent="0.45">
 
         <ImageView
-            android:id="@+id/imageIntelectuais"
             android:layout_width="157dp"
             android:layout_height="72dp"
             android:layout_gravity="center_horizontal|top"
             android:layout_marginTop="16dp"
-            app:srcCompat="@drawable/ic_intelectual" />
+            app:srcCompat="@drawable/ic_intelectual"/>
 
         <TextView
-            android:id="@+id/textIntelectuais"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|bottom"
@@ -141,10 +132,10 @@
             android:text="Intelectuais"
             android:textColor="#000000"
             android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
     </FrameLayout>
 
-    <!-- Quadrado/Card linha de baixo - Neurodivergentes -->
+    <!-- Card Neurodivergentes -->
     <FrameLayout
         android:id="@+id/cardNeurodivergentes"
         android:layout_width="0dp"
@@ -152,21 +143,19 @@
         android:layout_marginTop="16dp"
         android:background="#FA709D"
         android:onClick="neurodivergentes"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/cardIntelectuais"
         app:layout_constraintTop_toBottomOf="@id/cardSensoriais"
+        app:layout_constraintStart_toEndOf="@id/cardIntelectuais"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintWidth_percent="0.45">
 
         <ImageView
-            android:id="@+id/imageNeurodivergentes"
             android:layout_width="160dp"
             android:layout_height="74dp"
             android:layout_gravity="center_horizontal|top"
             android:layout_marginTop="16dp"
-            app:srcCompat="@drawable/ic_neurodivergente" />
+            app:srcCompat="@drawable/ic_neurodivergente"/>
 
         <TextView
-            android:id="@+id/textNeurodivergentes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|bottom"
@@ -174,19 +163,20 @@
             android:text="Neurodivergentes"
             android:textColor="#000000"
             android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
     </FrameLayout>
 
     <!-- Faixa inferior -->
     <View
         android:id="@+id/bottomView"
-        android:layout_width="409dp"
+        android:layout_width="0dp"
         android:layout_height="57dp"
         android:background="#FFEC9C"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
+    <!-- E-mail -->
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
@@ -198,6 +188,23 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"/>
+
+    <!-- Botão ChatBot -->
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="70dp"
+        android:backgroundTint="#001AFF"
+        android:onClick="chatbot"
+        android:text="Ir para o ChatBot"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/bottomView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
